# anagrammer

./: .gitignore  README.md  anagrams.cabal  result.txt  stack.yaml
app/: Bartavelle.hs  Basic2.hs  Basic3.hs  Kuribas.hs  Main1.hs  Main2.hs  MutableHash.hs
go/src/go_anagrams_basic/: main.go
haskell/: anagrams.cabal  stack.yaml
haskell/app/: Bartavelle.hs  Basic.hs  Bodigrim.hs  Kuribas.hs  MutableHash.hs
java/: AnagramFinderBasic.java
rust/: Cargo.toml
rust/src/: basic.rs  custom_hash.rs  custom_hash_par.rs  two_stage.rs  u8.rs
