name:                anagrams
version:             0.1.0.0
synopsis:            Find anagrams across lines of an ascii text file
description:         Please see README.md
homepage:            http://github.com/githubuser/anagrams#readme
license:             BSD3
license-file:        LICENSE
author:              James Wilson
build-type:          Simple
cabal-version:       >=1.10

-- the base implementation with obvious optimisations
executable anagrams1
  hs-source-dirs:      app
  main-is:             Main1.hs
  default-extensions:  OverloadedStrings, BangPatterns
  ghc-options:         -Wall -threaded -rtsopts
                      -- -fprof-auto -prof
                      -- "-with-rtsopts=-N -p -s -h -i0.1"
                       -O2 -optc-O3 -funfolding-use-threshold=100
  build-depends:       base
                     , bytestring
                     , containers
                     , unordered-containers
  default-language:    Haskell2010

-- use hashtable
executable anagrams2
  hs-source-dirs:      app
  main-is:             Main2.hs
  default-extensions:  OverloadedStrings, BangPatterns, ScopedTypeVariables
  ghc-options:         -Wall -threaded -rtsopts
                      -- -fprof-auto -prof
                      -- "-with-rtsopts=-N -p -s -h -i0.1"
                       -O2 -optc-O3 -funfolding-use-threshold=100
  build-depends:       base
                     , bytestring
                     , containers
                     , hashtables
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/anagrams
