name:                anagrams
version:             0.1.0.0
synopsis:            Find anagrams across lines of an ascii text file
description:         Please see README.md
homepage:            http://github.com/jsdw/anagrams
license:             PublicDomain
author:              James Wilson
build-type:          Simple
cabal-version:       >=1.10

-- the base implementation with obvious optimisations
executable anagrams-basic
  hs-source-dirs:      app
  main-is:             Basic.hs
  default-extensions:  OverloadedStrings, BangPatterns
  ghc-options:         -Wall -threaded -rtsopts
                      -- -fprof-auto -prof
                      -- "-with-rtsopts=-N -p -s -h -i0.1"
                       -O2 -optc-O3 -funfolding-use-threshold=100
  build-depends:       base
                     , bytestring
                     , containers
                     , unordered-containers
  default-language:    Haskell2010

-- use hashtable
executable anagrams-mutable-hash
  hs-source-dirs:      app
  main-is:             MutableHash.hs
  default-extensions:  OverloadedStrings, BangPatterns, ScopedTypeVariables
  ghc-options:         -Wall -threaded -rtsopts
                      -- -fprof-auto -prof
                      -- "-with-rtsopts=-N -p -s -h -i0.1"
                       -O2 -optc-O3 -funfolding-use-threshold=100
  build-depends:       base
                     , bytestring
                     , containers
                     , hashtables
  default-language:    Haskell2010

-- Bartavelles submission
executable anagrams-bartavelle
  hs-source-dirs:      app
  main-is:             Bartavelle.hs
  default-extensions:  OverloadedStrings, BangPatterns, FlexibleInstances
  ghc-prof-options:    -auto-all -caf-all
  ghc-options:         -Wall -threaded -rtsopts
                       -O2 -optc-O3 -funfolding-use-threshold=100
  build-depends:       base
                     , bytestring
                     , containers
                     , unordered-containers
                     , vector
                     , hashable
  default-language:    Haskell2010

-- submission from /r/kuribas
executable anagrams-kuribas
  hs-source-dirs:      app
  main-is:             Kuribas.hs
  default-extensions:  OverloadedStrings, BangPatterns, FlexibleInstances
  ghc-prof-options:    -auto-all -caf-all
  ghc-options:         -Wall -threaded -rtsopts
                       -O2 -optc-O3 -funfolding-use-threshold=100
  build-depends:       base
                     , bytestring
                     , containers
                     , unordered-containers
                     , vector
                     , hashable
  default-language:    Haskell2010

-- submission from Bodigrim
executable anagrams-bodigrim
  hs-source-dirs:      app
  main-is:             Bodigrim.hs
  default-extensions:  OverloadedStrings, BangPatterns
  ghc-options:         -Wall -threaded -rtsopts
                      -- -fprof-auto -prof
                      -- "-with-rtsopts=-N -p -s -h -i0.1"
                       -O2 -optc-O3 -funfolding-use-threshold=100
  build-depends:       base
                     , bytestring
                     , containers
                     , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jsdw/anagrams
