[package]
name = "anagrammer"
version = "0.1.0"
authors = ["James Wilson <me@unbui.lt>"]
publish = false

[profile.release]
# debug = true

[[bin]]
name = "rs_anagrams_basic"
path = "src/basic.rs"

[[bin]]
name = "rs_anagrams_basic_u8"
path = "src/u8.rs"

[[bin]]
name = "rs_anagrams_two_stage"
path = "src/two_stage.rs"

[dependencies]
fnv = { git = "https://github.com/servo/rust-fnv.git", rev = "4763756d50936a227b1687b0fb1464c784c4c9c3" }
