[package]
name = "anagrammer"
version = "0.1.0"
authors = ["James Wilson <me@unbui.lt>"]
publish = false

[profile.release]
# debug = true

[[bin]]
name = "rs_anagrams_basic"
path = "src/basic.rs"

[[bin]]
name = "rs_anagrams_basic_u8"
path = "src/u8.rs"

[[bin]]
name = "rs_anagrams_two_stage"
path = "src/two_stage.rs"

[[bin]]
name = "rs_anagrams_custom_hash"
path = "src/custom_hash.rs"

[[bin]]
name = "rs_anagrams_custom_hash_par"
path = "src/custom_hash_par.rs"

[dependencies]
crossbeam = "0.2"
fnv = "1.0.5"